--- a/public/src/assets/stylesheets/styles.css
+++ b/public/src/assets/stylesheets/styles.css
@@ -1101,7 +1101,7 @@ textarea {
   line-height: inherit;
 }
 a {
-  color: #337ab7;
+  color: #2ab27b;
   text-decoration: none;
 }
 a:hover,
@@ -1342,7 +1342,7 @@ mark,
   color: #777;
 }
 .text-primary {
-  color: #337ab7;
+  color: #2ab27b;
 }
 a.text-primary:hover {
   color: #286090;
@@ -1373,7 +1373,7 @@ a.text-danger:hover {
 }
 .bg-primary {
   color: #fff;
-  background-color: #337ab7;
+  background-color: #2ab27b;
 }
 a.bg-primary:hover {
   background-color: #286090;
@@ -3127,7 +3127,7 @@ fieldset[disabled] .btn-primary.active {
   border-color: #adadad;
 }
 .btn-primary .badge {
-  color: #337ab7;
+  color: #2ab27b;
   background-color: #fff;
 }
 
@@ -3171,11 +3171,11 @@ fieldset[disabled] .btn-second:active,
 .btn-second.disabled.active,
 .btn-second[disabled].active,
 fieldset[disabled] .btn-second.active {
-  background-color: #337ab7;
+  background-color: #2ab27b;
   border-color: #2e6da4;
 }
 .btn-second .badge {
-  color: #337ab7;
+  color: #2ab27b;
   background-color: #fff;
 }
 
@@ -3361,7 +3361,7 @@ fieldset[disabled] .btn-danger.active {
 }
 .btn-link {
   font-weight: normal;
-  color: #337ab7;
+  color: #2ab27b;
   border-radius: 0;
 }
 .btn-link,
@@ -3529,7 +3529,7 @@ tbody.collapse.in {
 .dropdown-menu > .active > a:focus {
   color: #fff;
   text-decoration: none;
-  background-color: #337ab7;
+  background-color: #2ab27b;
   outline: 0;
 }
 .dropdown-menu > .disabled > a,
@@ -3956,7 +3956,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 .nav .open > a:hover,
 .nav .open > a:focus {
   background-color: #eee;
-  border-color: #337ab7;
+  border-color: #2ab27b;
 }
 .nav .nav-divider {
   height: 1px;
@@ -4049,7 +4049,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 .nav-pills > li.active > a:hover,
 .nav-pills > li.active > a:focus {
   color: #fff;
-  background-color: #337ab7;
+  background-color: #2ab27b;
 }
 .nav-stacked > li {
   float: none;
@@ -4676,7 +4676,7 @@ fieldset[disabled] .navbar-inverse .btn-link:focus {
   padding: 6px 12px;
   margin-left: -1px;
   line-height: 1.42857143;
-  color: #337ab7;
+  color: #2ab27b;
   text-decoration: none;
   background-color: #fff;
   border: 1px solid #ddd;
@@ -4709,8 +4709,8 @@ fieldset[disabled] .navbar-inverse .btn-link:focus {
   z-index: 2;
   color: #fff;
   cursor: default;
-  background-color: #337ab7;
-  border-color: #337ab7;
+  background-color: #2ab27b;
+  border-color: #2ab27b;
 }
 .pagination > .disabled > span,
 .pagination > .disabled > span:hover,
@@ -4824,7 +4824,7 @@ a.label:focus {
   background-color: #5e5e5e;
 }
 .label-primary {
-  background-color: #337ab7;
+  background-color: #2ab27b;
 }
 .label-primary[href]:hover,
 .label-primary[href]:focus {
@@ -4892,7 +4892,7 @@ a.badge:focus {
 }
 .list-group-item.active > .badge,
 .nav-pills > .active > a > .badge {
-  color: #337ab7;
+  color: #2ab27b;
   background-color: #fff;
 }
 .list-group-item > .badge {
@@ -4963,7 +4963,7 @@ a.badge:focus {
 a.thumbnail:hover,
 a.thumbnail:focus,
 a.thumbnail.active {
-  border-color: #337ab7;
+  border-color: #2ab27b;
 }
 .thumbnail .caption {
   padding: 9px;
@@ -5085,7 +5085,7 @@ a.thumbnail.active {
   line-height: 20px;
   color: #fff;
   text-align: center;
-  background-color: #337ab7;
+  background-color: #2ab27b;
   -webkit-box-shadow: inset 0 -1px 0 rgba(0, 0, 0, .15);
           box-shadow: inset 0 -1px 0 rgba(0, 0, 0, .15);
   -webkit-transition: width .6s ease;
@@ -5238,8 +5238,8 @@ a.list-group-item:focus {
 .list-group-item.active:focus {
   z-index: 2;
   color: #fff;
-  background-color: #337ab7;
-  border-color: #337ab7;
+  background-color: #2ab27b;
+  border-color: #2ab27b;
 }
 .list-group-item.active .list-group-item-heading,
 .list-group-item.active:hover .list-group-item-heading,
@@ -5603,22 +5603,22 @@ a.list-group-item-danger.active:focus {
   border-bottom-color: #ddd;
 }
 .panel-primary {
-  border-color: #337ab7;
+  border-color: #2ab27b;
 }
 .panel-primary > .panel-heading {
   color: #fff;
-  background-color: #337ab7;
-  border-color: #337ab7;
+  background-color: #2ab27b;
+  border-color: #2ab27b;
 }
 .panel-primary > .panel-heading + .panel-collapse > .panel-body {
-  border-top-color: #337ab7;
+  border-top-color: #2ab27b;
 }
 .panel-primary > .panel-heading .badge {
-  color: #337ab7;
+  color: #2ab27b;
   background-color: #fff;
 }
 .panel-primary > .panel-footer + .panel-collapse > .panel-body {
-  border-bottom-color: #337ab7;
+  border-bottom-color: #2ab27b;
 }
 .panel-success {
   border-color: #d6e9c6;
